manifests/test/checkout-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-web-app
  namespace: ambassador-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-web-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: checkout-web-app
    spec:
      containers:
      - name: checkout-web-app
        image: ayalamac/arq-ambassador-checkout-web-app:v2
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: checkout-web-app
        - secretRef:
            name: checkout-web-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
