manifests/test/checkout-web-app-http-proxy-checkout.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: checkout-web-app-checkout
  namespace: ambassador-test
spec:
  virtualhost:
    fqdn: checkout.ambassadors.ink
    tls:
      secretName: checkout-ambassador-tls
  routes:
    - conditions:
      - prefix: /
      services:
        - name: checkout-web-app
          port: 80
