manifests/test/checkout-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkout-web-app
  name: checkout-web-app
  namespace: ambassador-test
spec:
  selector:
    app: checkout-web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
